<resources>
    <!-- LOGIN STRINGS: -->
    <string name="app_name">TemPac</string>
    <string name="googlePlayLogin">Google play games login</string>
    <string name="signUp">Sign Up</string>
    <string name="login">Log In</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>

    <!-- GAME OVER STRINGS: -->
    <string name="madeby">Game made by:</string>
    <string name="credits">
        Carles Perez Onielfa \n\t\t(98perezcarles@gmail.com)\n
        Pau Soler Valadés \n\t\t(pau.soler.valades@gmail.com)\n
        Gabriel Lluís Luengo \n\t\t(gabriel.lluis3@gmail.com)\n
        Miguel Augusto March Piris \n\t\t(miguelaugusto179@gmail.com)\n
        Piotr Piwowarski \n\t\t(piotr95piwowarski@gmail.com)
    </string>
    <string name="game_over">GAME OVER</string>
    <string name="your_score">Score:</string>
    <string name="your_high_score">Highscore:</string>
    <string name="overall_high_score">Overall Highscore:</string>
    <string name="your_name">Your name:</string>
    <string name="menu">Menu</string>
    <string name="share">Share</string>
    <string name="tap_the_screen_to_play_again">Tap the screen to play again</string>

    <string name="pause">Pause</string>
    <!-- SETTINGS STRINGS: -->
    <string name="volume">Volume:</string>
    <string name="sfx">SFX:</string>
    <string name="language">Language:</string>
    <string name="back">Back</string>
    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
        <item>Catalan</item>
    </string-array>

    <!-- MAINMENU STRINGS: -->
    <string name="main_title">TEMPAC</string>
    <string name="play">PLAY</string>
    <string name="highscores">HIGHSCORES</string>
    <string name="settings">SETTINGS</string>
    <string name="posicion_highscore">Ranking</string>
    <string name="usuario_highscore">Username</string>
    <string name="puntuacion_highscore">Score</string>
    <string name="tu_mejor_puntuacion">Your personal highscore!</string>
    <string name="tu_puntuacion">Your personal highscore!</string>
    <string name="die">DIE</string>
    <string name="credits1">credits</string>
    <string name="replaytutorial">Replay tutorial</string>
    <string name="skipLogin">Continue without logging in</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="username">Username</string>

    <!-- CONFIRM EXIT STRINGS: -->
    <string name="sure_to_exit">Are you sure you want to exit the game?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="back2Menu">Close Game</string>
    <string name="continueGame">continue</string>
    <string name="signout">Sign Out</string>
    <string name="confirmation">OK!</string>
    <string name="chooseUsername">Choose a username</string>
    <string name="changeUsername">Change Username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- GOOGLE TOKEN: -->

</resources>
