<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.MainMenuActivity" android:background="@color/colorPrimaryDark">

    <TextView
            android:text="@string/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_title" android:textSize="64sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="165dp"
            app:layout_constraintTop_toTopOf="parent" app:fontFamily="@font/impact"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimary"
            android:padding="20dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="307dp"
            android:layout_height="224dp"
            android:id="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_title"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent">
        <Button
                android:text="@string/play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btn_play"
                style="@style/ButtonLight"/>
        <Button
                android:text="@string/highscores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btn_highscores"
                style="@style/ButtonLight"/>
        <Button
                android:text="@string/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btn_settings"
                style="@style/ButtonLight"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>