<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".GameOverFragment">
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".GameActivity"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/backgroundLayout">

        <TextView
                android:text="@string/game_over"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gameOverText" android:textSize="64sp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:layout_marginTop="120dp"
                app:layout_constraintTop_toTopOf="parent" app:fontFamily="@font/impact"
                android:textColor="@color/colorAccent"/>

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:id="@+id/scoreTextLinearLayout"
                      app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                      android:layout_marginStart="75dp" android:layout_marginRight="8dp"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                      app:layout_constraintBottom_toBottomOf="parent"
        >
            <TextView
                    android:text="@string/your_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yourScoreText" android:textSize="18sp"
                    android:textColor="@color/colorText"/>
            <TextView
                    android:text="@string/your_high_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yourHighScoreText" android:textSize="18sp" android:textColor="@color/colorText"/>
            <TextView
                    android:text="@string/overall_high_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/overallHighScoreText" android:textSize="18sp"
                    android:textColor="@color/colorText"/>
            <TextView
                    android:text="@string/your_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yourNameText" android:textSize="18sp" android:textColor="@color/colorText"/>
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:id="@+id/scoreResultLinearLayout"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                      android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                      android:layout_marginEnd="75dp" android:layout_marginRight="8dp">
            <TextView
                    android:text="1903"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yourScoreResultText" android:textSize="18sp" android:textColor="@color/colorText"/>
            <TextView
                    android:text="8462"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/youtHighScoreResultText" android:textSize="18sp"
                    android:textColor="@color/colorText"/>
            <TextView
                    android:text="10666"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/overallHighScoreResultText" android:textSize="18sp"
                    android:textColor="@color/colorText"/>
            <TextView
                    android:text="piciupol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yourNameResultText" android:textSize="18sp" android:textColor="@color/colorText"/>
        </LinearLayout>
        <Button
                android:text="@string/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menuButton" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp" android:layout_marginBottom="150dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/shareButton"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.5"
                android:background="@drawable/button_normal"
                android:textColor="@color/brightYellow"/>
        <Button
                android:text="@string/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shareButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp" android:layout_marginBottom="150dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/menuButton"
                app:layout_constraintHorizontal_bias="0.5"
                android:background="@drawable/button_normal"
                android:textColor="@color/brightYellow"/>
        <TextView
                android:text="@string/tap_the_screen_to_play_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/playAgainText" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="20dp" app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/colorText"
        />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>