<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="@color/colorPrimaryDark">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_high_small"
            android:layout_marginBottom="@dimen/margin_high_small"
            android:padding="10dp"
            android:background="@color/colorPrimary">
        <TextView
                android:text="@string/posicion_highscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:layout_margin="@dimen/margin_high_small"/>
        <TextView
                android:text="@string/usuario_highscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="1"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:layout_margin="@dimen/margin_high_small"/>
        <TextView
                android:text="@string/puntuacion_highscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:layout_margin="@dimen/margin_high_small"/>
    </LinearLayout>
    <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/highscore_listView"
            android:padding="20dp"/>
</LinearLayout>