<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".View.SignUpActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="275dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            android:padding="40dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:background="@color/colorPrimaryDark"
                android:padding="8dp"
                android:textColorHint="@color/colorPrimary"
                android:id="@+id/editText_mail" android:layout_weight="1" android:textColor="@color/colorText"
                android:autofillHints="" android:hint="@string/email"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/colorPrimary"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:background="@color/colorPrimaryDark"
                android:padding="8dp"
                android:textColorHint="@color/colorPrimary"
                android:id="@+id/editText_username" android:layout_weight="1" android:textColor="@color/colorText"
                android:autofillHints="" android:hint="@string/username"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/colorPrimary"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@color/colorPrimaryDark"
                android:padding="8dp"
                android:id="@+id/editText_password"
                android:layout_weight="1"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorPrimary"

                android:inputType="textPassword" android:autofillHints="" android:hint="@string/password"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/colorPrimary"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:background="@color/colorPrimaryDark"
                android:padding="8dp"
                android:textColorHint="@color/colorPrimary"
                android:id="@+id/editText_confirmPassword" android:layout_weight="1"
                android:textColor="@color/colorText"
                android:autofillHints="" android:hint="@string/confirmPassword"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@color/colorPrimary"/>
        <Button
                android:text="@string/signUp"
                android:layout_width="match_parent"
                android:id="@+id/button_signup"
                style="@style/ButtonDark" android:layout_height="wrap_content"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>