<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.ConfirmExitActivity" android:background="@android:color/transparent">

    <TextView
            android:text="@string/sure_to_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSureToExit" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.445"
            android:textColor="@color/colorText"/>
    <Button
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_Yes" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.602" android:background="@color/colorPrimary"
            android:textColor="@color/colorText"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_No" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_No" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.602" android:textColor="@color/colorText"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/btn_Yes" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"/>
</android.support.constraint.ConstraintLayout>